# mpsadjoint

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REAMDE.md  _config.yml  environment.yml  get_active_from_BFdata.py  get_active_from_BFdata_phase3.py  pyproject.toml  requirements.txt  setup.py  synthetic.py  synthetic_framework.py
.github/workflows/: build_docs.yml  ci-conda.yml  main.yml
docs/: api.rst
meshes/: chip_bayK_clmax_10.h5  chip_bayK_clmax_160.h5  chip_bayK_clmax_20.h5  chip_bayK_clmax_40.h5  chip_bayK_clmax_80.h5  chip_omecamtiv_clmax_40.h5
mpsadjoint/: __init__.py  cardiac_mechanics.py  inverse.py  inverse_cp.py  io_files.py  mesh_setup.py  motiontracking.py  mpsmechanics.py  nonlinearproblem.py
sandbox/: average_displacement_beat.py  motiontracking.py
scripts/: get_active_from_BFdata.py  get_active_from_BFdata_phase1.py  get_active_from_BFdata_phase2.py  get_active_from_BFdata_phase3.py  synthetic.py  synthetic_framework.py
src/mpsadjoint/: __init__.py  cardiac_mechanics.py  inverse.py  inverse_cp.py  io_files.py  mesh_setup.py  motiontracking.py  mpsmechanics.py  nonlinearproblem.py
tests/: test_angle.py  test_constant_unit_cube.py  test_cost_function.py  test_eval_cp.py  test_iterative_solver.py  test_material_parameters.py  test_mesh_setup.py  test_taylor.py
