[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mpsadjoint"
version = "0.0.1"
description = "Estimate active tension and fiber angles in cardiac microtissues"
authors = [{name = "Åshild Telle", email = "aashild@simula.no"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["finite element", "MPS", "cardiac", "adjoint"]
urls = {Homepage = "https://github.com/aashildte/mpsadjoint"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "mpi4py",
    "opencv-python<=4.7.0.72",
    "dask",
    "cyipopt",
    "dolfin-adjoint",
    "cardiac-mps",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "bump2version",
    "ipython",
    "pdbpp",
    "pre-commit",
    "twine",
    "wheel",
]
docs = [
    "jupyter-book",
    "jupytext",
]
test = [
    "pytest",
    "pytest-cov",
]


[tool.mypy]
files = ["src/mpsadjoint", "tests"]
ignore_missing_imports = true
exclude = "docs"

[tool.coverage.run]
omit = ["src/mpsadjoint/__main__.py"]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
